# capnp-nonblock

./: .travis.yml  Cargo.toml  README.md
examples/: crc.rs
examples/crc-server/: Cargo.toml  README.md
examples/crc-server/src/: client.rs  lib.rs  messages.capnp
src/: buf.rs  lib.rs  test_utils.rs
