[package]
name = "capnp-nonblock"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
description = "Cap'n Proto serialization on non-blocking streams"

[dependencies]
nom = "1"
capnp = "0.5"
byteorder = "0.4"

[dev-dependencies]
capnp = { version = "0.5", features = ["quickcheck"] }
quickcheck = "0.2"
