[package]
name = "capnp-nonblock"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
description = "Cap'n Proto serialization on non-blocking streams"

[dependencies]
capnp = "0.5"
byteorder = "0.4"

[dev-dependencies]
capnp = { version = "0.5", features = ["quickcheck"] }
crc-server = { path = "examples/crc-server" }
docopt = "0.6"
env_logger = "0.3"
quickcheck = "0.2"
rustc-serialize = "0.3"
